# build-systems-course

./: README.md
collaborativedoc/: collaborativedoc10oct.md  collaborativedoc11oct.md  collaborativedoc8oct.md  collaborativedoc9oct.md
presentations/: welcome.md
presentations/Spack/: spack-demo.md
presentations/Spack/blas/src/: CMakeLists.txt  fftblas.c  spack.yaml
presentations/easybuild/: easybuild.md
